--- a/index.html
+++ b/index.html
@@ -56,6 +56,14 @@
     <h1>Hello World!</h1>
   </div>
 
+  <!-- Footer -->
+  <footer>
+    <nav class="navbar fixed-bottom navbar-light bg-light">
+      <div class="container-fluid">
+        <h5><i class="fas fa-copyright"></i> Copyright 2021</h4>
+      </div>
+    </nav>
+  </footer>
   <!-- Javascript -->
   <script src="./node_modules/jquery/dist/jquery.min.js"></script>
   <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
