Tested dependencies (jQuery, Popper, etc.)

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
   
   <div class="container">
     <h1>Hello World!</h1>
+    <button id="clickMe" class="btn btn-lg btn-success">Click Me</button>
   </div>
 
   <!-- Footer -->
@@ -67,6 +68,6 @@
   <!-- Javascript -->
   <script src="./node_modules/jquery/dist/jquery.min.js"></script>
   <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="./scripts/app.js/"></script>
+  <script src="./scripts/app.js"></script>
 </body>
 </html
